# Polar-lights

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/base_classes/: base_downloader.py  base_processor.py
app/cosmic_ray/: load.py
app/gfz/: gfz_downloader.py  gfz_processor.py
app/kyoto/: kyoto_dst_downloader.py  kyoto_dst_processor.py
app/nmdb/: nmdb_downloader.py  nmdb_processor.py
app/observation/: observation_links_finder.py  observation_parser.py  observation_processor.py
app/omni/: omni_downloader.py  omni_processor.py
app/omniweb/: __init__.py  omniweb_downloader.py
app/pipeline/: observation_pipeline.py  observation_workflow.py  omniweb_pipeline.py  space_weather_pipeline.py  spaceweather_pipeline.py
app/simurg/: gim_downloader.py  gim_processor.py  simurg_client.py  simurg_downloader.py  simurg_processor.py
app/spaceweather/: __init__.py  downloaders.py
app/storage/: hdf5_storage.py
app/visualization/: aurora_map_plotter.py  color_utils.py  cosmic_ray_plotter.py  geo_utils.py  gim_plotter.py  ionosonde_plotter.py  keogram_plotter.py  plot_gim.py  plot_settings.py  plot_utils.py  roti_plotter.py  solar_and_indexes_plotter.py
app/visualization/data_loaders/: __init__.py  ionosonde.py
files/: EQ2.txt
