[project]
name = "polar-lights"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri-ga1",email = "regota09@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "selenium (>=4.39.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "cartopy (>=0.25.0,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
